--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@lorki97/node-resourcehacker": "^1.3.1",
     "@types/node": "^17.0.8",
     "colors.ts": "^1.0.20",
+    "create-desktop-shortcuts": "^1.5.0",
     "create-ico": "^1.0.0",
     "create-nodew-exe": "^1.0.10",
     "install": "^0.13.0",
@@ -25,6 +26,7 @@
     "pkg": "^4.5.1",
     "prompt-sync": "^4.2.0",
     "resedit": "^1.5.0",
+    "windows-shortcuts": "^0.1.6",
     "yarn": "^1.22.17"
   }
 }
