added run as admin.

--- a/modules/reverse_shell/rh/ResourceHacker.ini
+++ b/modules/reverse_shell/rh/ResourceHacker.ini
@@ -1,6 +1,6 @@
 [MRU List]
-MRU1=\home\kushev\git-projects\KanapeFramework\pkg-cache\v2.6\fetched-v14.4.0-win-x64
-MRU2=
+MRU1=\home\kushev\git-projects\KanapeFramework\payload.exe
+MRU2=\home\kushev\git-projects\KanapeFramework\pkg-cache\v2.6\fetched-v14.4.0-win-x64
 MRU3=
 MRU4=
 MRU5=
