Added reset option for module vaules.

--- a/modules/reverse_shell/rh/ResourceHacker.ini
+++ b/modules/reverse_shell/rh/ResourceHacker.ini
@@ -1,8 +1,8 @@
 [MRU List]
-MRU1=\home\kushev\git-projects\KanapeFramework\payload.exe
-MRU2=\home\kushev\git-projects\KanapeFramework\pkg-cache\v2.6\fetched-v14.4.0-win-x64
-MRU3=
-MRU4=
+MRU1=\home\kushev\git-projects\KanapeFramework\pkg-cache\v2.6\fetched-v14.4.0-win-x64
+MRU2=\home\kushev\git-projects\KanapeFramework\payload.exe
+MRU3=\home\kushev\git-projects\KanapeFramework\runme.exe
+MRU4=\home\kushev\git-projects\KanapeFramework\SlimeRancher.exe
 MRU5=
 MRU6=
 MRU7=
